Create service for generate content-based recommendation